# convert-python-project-to-one-file

./: README
docs/: index.html
docs/prm/: main.py  pyscript.toml
python/: Dockerfile  main.py  pyproject.toml
python/prm/: library_1.py  library_2.py  main.py  output.py
