[project]
dependencies = [
  "fire==0.5.0",
  "networkx==3.2.1",
  "pydeps==1.12.18",
  "pygraphviz==1.12",
  "requests==2.31.0"
]
name = "convert-to-one-file"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.1",
  "djlint==1.34.1",
  "mypy==1.8.0",
  "ruff==0.2.2",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
validate_readme = "main:main"

[tool.setuptools]
py-modules = ["main"]
